--- a/ToDoey/Views/Base.lproj/Main.storyboard
+++ b/ToDoey/Views/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="wiR-es-q9g" id="pvb-7h-ZYa"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoey" id="cu3-SE-oS6"/>
+                    <navigationItem key="navigationItem" title="ToDoey" id="cu3-SE-oS6">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="xPf-ec-mVk">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPresed:" destination="wiR-es-q9g" id="Pfh-h2-7mY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="llm-i3-AO2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
